--- a/generate training command.ipynb
+++ b/generate training command.ipynb
@@ -15,10 +15,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#for imdb\n",
+    "GARs=[\"fedavg\",\"median\",\"gm\",\"mkrum\",\"foolsGold\",\"residualbase\"]\n",
+    "filename=\"batchjobs_imdb.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "          \"n_attacker_labelFlipping\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='imdb'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=10\n",
+    "outfolder='compareAllAttacks'\n",
+    "save_model_weights=True\n",
+    "    \n",
+    "# repeat=0\n",
+    "for gar in GARs:\n",
+    "    for repeat in [1]:\n",
+    "        name=f\"No_Attack({repeat})\"\n",
+    "        out = f\"python main.py --GAR {gar:<15} --optimizer Adam --attacks \\\"{name}\\\" \\\n",
+    "        --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs} \"\n",
+    "        if save_model_weights:\n",
+    "            out+=\"--save_model_weights\"\n",
+    "#         out+=f\" |& tee \\\"results/exp_out_log/{dataset}_{loader_type}_{name}_{gar}.txt\\\"\"\n",
+    "        print(out,file=open(filename,\"a\"))\n",
+    "\n",
+    "\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            for repeat in [1]:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --optimizer Adam --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs} \"\n",
+    "                if save_model_weights:\n",
+    "                    out+=\"--save_model_weights\"\n",
+    "#                 out+=f\" |& tee \\\"results/exp_out_log/{dataset}_{loader_type}_{name}_{gar}.txt\\\"\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for imdb\n",
+    "GARs=[\"foolsGold\"]\n",
+    "filename=\"batchjobs_imdb_foolsgold.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "          \"n_attacker_labelFlipping\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='imdb'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=10\n",
+    "outfolder='compareAllAttacks'\n",
+    "save_model_weights=False\n",
+    "    \n",
+    "# repeat=0\n",
+    "for gar in GARs:\n",
+    "    for repeat in [1]:\n",
+    "        name=f\"No_Attack({repeat})\"\n",
+    "        out = f\"python main.py --GAR {gar:<15} --optimizer Adam --attacks \\\"{name}\\\" \\\n",
+    "        --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs} \"\n",
+    "        if save_model_weights:\n",
+    "            out+=\"--save_model_weights\"\n",
+    "#         out+=f\" |& tee \\\"results/exp_out_log/{dataset}_{loader_type}_{name}_{gar}.txt\\\"\"\n",
+    "        print(out,file=open(filename,\"a\"))\n",
+    "\n",
+    "\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            for repeat in [1]:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --optimizer Adam --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs} \"\n",
+    "                if save_model_weights:\n",
+    "                    out+=\"--save_model_weights\"\n",
+    "#                 out+=f\" |& tee \\\"results/exp_out_log/{dataset}_{loader_type}_{name}_{gar}.txt\\\"\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))"
+   ]
   },
   {
    "cell_type": "code",
@@ -60,6 +155,57 @@
     "    for i in attack:\n",
     "        for j in n_attackers:\n",
     "            for repeat in [0,1,2]:\n",
+    "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
+    "                out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "            --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "            --dataset {dataset} --epochs {epochs} \"\n",
+    "                if save_model_weights:\n",
+    "                    out+=\"--save_model_weights\"\n",
+    "\n",
+    "                print(out,file=open(filename,\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for semantic backdoor\n",
+    "GARs=[\"foolsgold\"]\n",
+    "filename=\"batchjobs_cifar_foolsgold.sh\"\n",
+    "print(\"\",file=open(filename,\"w\"))\n",
+    "attack = [\\\n",
+    "          \"n_attacker_semanticBackdoor\",\n",
+    "          \"n_attacker_backdoor\", \n",
+    "          \"n_attacker_labelFlippingDirectional\",\n",
+    "          \"n_attacker_omniscient\"\n",
+    "         ]\n",
+    "n_attackers=[\\\n",
+    "             1,2,3,4,]\n",
+    "dataset='cifar'\n",
+    "loader_type='dirichlet'\n",
+    "epochs=30\n",
+    "outfolder='compareAllAttacks'\n",
+    "save_model_weights=True\n",
+    "    \n",
+    "# repeat=0\n",
+    "for gar in GARs:\n",
+    "    for repeat in [0]:\n",
+    "        name=f\"No_Attack({repeat})\"\n",
+    "        out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
+    "        --loader_type {loader_type} --output_folder {outfolder} \\\n",
+    "        --experiment_name \\\"{dataset}_{loader_type}/{name}/{gar}\\\" \\\n",
+    "        --dataset {dataset} --epochs {epochs} \"\n",
+    "        if save_model_weights:\n",
+    "            out+=\"--save_model_weights\"\n",
+    "        print(out,file=open(filename,\"a\"))\n",
+    "\n",
+    "\n",
+    "    for i in attack:\n",
+    "        for j in n_attackers:\n",
+    "            for repeat in [0]:\n",
     "                name=i.split(\"_\")[-1]+\"_\"+str(j)+f\"({repeat})\"\n",
     "                out = f\"python main.py --GAR {gar:<15} --attacks \\\"{name}\\\" \\\n",
     "            --{i} {j} --loader_type {loader_type} --output_folder {outfolder} \\\n",
@@ -135,18 +281,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "#for semantic backdoor\n",
-    "GARs=[\"residualbase\",\"foolsgold\",\"mkrum\"]\n",
-    "filename=\"batchjobs_missedExp.sh\"\n",
+    "GARs=[\"mkrum\"]\n",
+    "filename=\"batchjobs_missedExp1.sh\"\n",
     "print(\"\",file=open(filename,\"w\"))\n",
     "attack = [\\\n",
-    "#           \"n_attacker_semanticBackdoor\",\n",
-    "#           \"n_attacker_backdoor\", \n",
-    "          \"n_attacker_labelFlippingDirectional\",\n",
+    "          \"n_attacker_semanticBackdoor\",\n",
+    "          \"n_attacker_backdoor\", \n",
+    "#           \"n_attacker_labelFlippingDirectional\",\n",
     "          \"n_attacker_omniscient\"\n",
     "         ]\n",
     "n_attackers=[\\\n",
@@ -277,13 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for eps in [0.001, 0.01,0.02,0.05,0.1, 0.5]:\n",
+    "print(\"\",file=open(\"ablation.sh\",\"w\"))\n",
+    "for eps in [0.0001, 0.001,0.002,0.005,0.01, 0.05]:\n",
     "    for c in [0.5,1,10, 20, 100]:\n",
-    "        print(f\"python aggregator/train_attention.py @aggregator/args --eps {eps} --scale {c}\",file=open(\"ablation cifar.sh\",\"a\"))"
+    "        print(f\"python aggregator/train_attention.py @aggregator/args --eps {eps} --scale {c} --epochs 100\",file=open(\"ablation.sh\",\"a\"))"
    ]
   },
   {
@@ -293,7 +447,7 @@
    "outputs": [],
    "source": [
     "print(\"\",file=open(\"ablation_cifar.sh\",\"w\"))\n",
-    "for eps in [0.001, 0.01,0.02,0.05,0.1, 0.5]:\n",
+    "for eps in [0.0001, 0.001,0.002,0.005,0.01, 0.05]:\n",
     "    for c in [0.5,1,10, 20, 100]:\n",
     "        print(f\"python aggregator/train_attention.py @aggregator/args_cifar --eps {eps} --scale {c}\",file=open(\"ablation_cifar.sh\",\"a\"))"
    ]
@@ -313,7 +467,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python aggregator/train_attention.py @aggregator/args_cifar_backdoor --eps 0.01 --scale 10 "
+    "python aggregator/train_attention.py @aggregator/args_cifar_backdoor --eps 0.05 --scale 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python aggregator/train_attention.py @aggregator/args_cifar_backdoor_noC --eps 0.05 --scale 1 \n",
+    "python aggregator/train_attention.py @aggregator/args_cifar_backdoor_noEps --eps 0 --scale 10 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python aggregator/train_attention.py @aggregator/args_imdb --eps 0.05 --scale 10 --max_round 10 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python aggregator/train_MLP.py @aggregator/args_cifar_backdoor_MLP "
    ]
   }
  ],
